<resources>
    <string name="app_name">Career Carve Android Application</string>

    <string name="welcome">Welcome!!!</string>
    <string name="select_your_profession">Select your profession…</string>
    <string name="i_am_a_student">I am a student…</string>
    <string name="i_am_a_mentor">I am a mentor…</string>
    <string name="or">Or</string>
    <string name="enter_name">Enter your name…</string>
    <string name="enter_email">Enter your email id…</string>
    <string name="enter_aoi">Enter your area of interest…</string>
    <string name="submit">Submit</string>

    <string name="enter_your_preferred_days">Please select your preferred days…</string>
    <string name="enter_your_preferred_timings">Please select your preferred timings…</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="enter_start_timing">Start timing…</string>
    <string name="enter_end_timing">End timing…</string>

    <string name="schedule_a_meeting">Schedule a meeting</string>
    <string name="what_is_your_area_of_interest">What is your area of interest???</string>
    <string name="enter_date_for_scheduling_meeting">Select a date for scheduling a meeting with our mentors.</string>
    <string name="select_date">Select date.</string>
    <string name="change_mentor">Want to change mentor?</string>
    <string name="enter_mentor_id">Enter mentor id</string>
    <string name="change_mentor_btn">Change mentor</string>
    <string name="pay_btn">Pay and book your meeting</string>


</resources>