<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".entry_point.presentation.fragment.DetailsForStudentFragment">

            <ImageView
                android:id="@+id/profile_image"

                android:layout_width="@dimen/d_126"
                android:layout_height="@dimen/d_126"

                tools:background="@color/black"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="@dimen/d_24"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_baseline_add_circle_24"

                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"

                android:layout_margin="@dimen/d_12"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_edit_text_layout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:hint="@string/enter_name"

                android:textColorHint="@color/black"

                app:errorEnabled="false"
                app:hintTextColor="@color/black"

                android:layout_margin="@dimen/d_16"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text_layout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:hint="@string/enter_email"

                android:textColorHint="@color/black"

                app:errorEnabled="false"
                app:hintTextColor="@color/black"

                android:layout_margin="@dimen/d_16"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_edit_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aoi_edit_text_layout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/d_8"
                android:hint="@string/enter_aoi"

                android:textColorHint="@color/black"

                app:errorEnabled="false"
                app:hintTextColor="@color/black"

                android:layout_margin="@dimen/d_16"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/aoi_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/enter_preferred_days_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/enter_your_preferred_days"

                app:layout_constraintTop_toBottomOf="@id/aoi_edit_text_layout"
                app:layout_constraintStart_toStartOf="parent"

                android:textSize="@dimen/s_18"
                android:textColor="@color/black"

                android:layout_marginTop="@dimen/d_8"
                />


            <LinearLayout
                android:id="@+id/preferred_timings_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/enter_preferred_days_text_view"
                app:layout_constraintStart_toStartOf="parent"

                android:orientation="vertical"

                android:padding="@dimen/d_16"
                android:layout_margin="@dimen/d_8"
                >

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/monday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/monday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/tuesday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tuesday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/wednesday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/wednesday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/thrusday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/thursday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/friday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/friday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/saturday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/saturday"

                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sunday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sunday"

                    />

            </LinearLayout>

            <TextView
                android:id="@+id/enter_preferred_timings_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/enter_your_preferred_timings"

                app:layout_constraintTop_toBottomOf="@id/preferred_timings_layout"
                app:layout_constraintStart_toStartOf="parent"

                android:textSize="@dimen/s_18"
                android:textColor="@color/black"

                android:layout_marginTop="@dimen/d_8"
                />

            <TextView
                android:id="@+id/start_timing"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/enter_start_timing"
                android:textSize="@dimen/s_18"
                android:textColor="@color/black"

                android:padding="@dimen/d_8"

                android:layout_margin="@dimen/d_4"

                app:layout_constraintTop_toBottomOf="@id/enter_preferred_timings_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/end_timing"
                />

            <TextView
                android:id="@+id/end_timing"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/enter_end_timing"
                android:textSize="@dimen/s_18"
                android:textColor="@color/black"

                android:padding="@dimen/d_8"

                android:layout_margin="@dimen/d_4"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/start_timing"
                app:layout_constraintTop_toBottomOf="@id/enter_preferred_timings_text_view" />

            <Button
                android:id="@+id/submit_btn"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/end_timing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:layout_margin="@dimen/d_24"

                android:text="@string/submit"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
