<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".entry_point.presentation.fragment.DetailsForStudentFragment">

        <ImageView
            android:id="@+id/profile_image"

            android:layout_width="@dimen/d_126"
            android:layout_height="@dimen/d_126"

            tools:background="@color/black"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="@dimen/d_24"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/ic_baseline_add_circle_24"

            app:layout_constraintEnd_toEndOf="@id/profile_image"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"

            android:layout_margin="@dimen/d_12"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_edit_text_layout"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/enter_name"

            android:textColorHint="@color/black"

            app:errorEnabled="false"
            app:hintTextColor="@color/black"

            android:layout_margin="@dimen/d_16"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text_layout"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/d_8"
            android:hint="@string/enter_email"

            android:textColorHint="@color/black"

            app:errorEnabled="false"
            app:hintTextColor="@color/black"

            android:layout_margin="@dimen/d_16"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/email_edit_text_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="@dimen/d_24"

            android:text="@string/submit"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
